# Tire_bot

./: .gitignore  __main__.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml  run.py
app/: admin.py  builder.py  handlers.py  keyboards.py  sending_to_sheets.py  states.py
app/database/: models.py  requests.py
tire_bot/: __main__.py  admin.py  builder.py  handlers.py  keyboards.py  my_router.py  sending_to_sheets.py  states.py
tire_bot/database/: models.py  requests.py
