[tool.poetry]
name = "tire-bot"
version = "0.1.0"
description = ""
authors = ["Sergulyok <STIFT1997@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.35"
aiosqlite = "^0.20.0"
pygsheets = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
