[tool.poetry]
name = "tire-bot"
version = "0.1.0"
description = ""
authors = ["Sergulyok <STIFT1997@mail.ru>"]
readme = "README.md"

packages = [{ include = 'tire_bot'}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.35"
aiosqlite = "^0.20.0"
pygsheets = "^2.0.6"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tire-bot = 'tire_bot.__main__:main'